--- a/RecycleRush2538.yml
+++ b/RecycleRush2538.yml
@@ -338,52 +338,42 @@ Children:
     - Children: []
       Properties:
         Input Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id014 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
-            '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22',
-            '23', '24', '25']
+          choices: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+            '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
+            '24', '25']
           default: '0'
           name: Input Channel (Digital)
-          validators: &id015 [DigitalChannel]
+          validators: [DigitalChannel]
           value: '0'
-      Base: Limit Switch
-      Name: subsequentToteSwitch
-    - Children: []
-      Properties:
-        Input Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id014
-          default: '0'
-          name: Input Channel (Digital)
-          validators: *id015
-          value: '1'
       Base: Limit Switch
       Name: firstToteSwitch
     - Children: []
       Properties:
         Forward PCM (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id016 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
+          choices: &id014 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
             '11', '12', '13', '14', '15', '16', '17', '18', '19', '20']
           default: '0'
           name: Forward PCM (Solenoid)
-          validators: &id017 [Solenoid]
+          validators: &id015 [Solenoid]
           value: '0'
         Reverse PCM (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id018 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
+          choices: &id016 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
             '11', '12', '13', '14', '15', '16', '17', '18', '19', '20']
           default: '0'
           name: Reverse PCM (Solenoid)
-          validators: &id019 [Solenoid]
+          validators: &id017 [Solenoid]
           value: '0'
         Reverse Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id020 ['0', '1', '2', '3', '4', '5', '6', '7']
+          choices: &id018 ['0', '1', '2', '3', '4', '5', '6', '7']
           default: '0'
           name: Reverse Channel (Solenoid)
-          validators: &id021 [Solenoid]
+          validators: &id019 [Solenoid]
           value: '3'
         Forward Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id022 ['0', '1', '2', '3', '4', '5', '6', '7']
+          choices: &id020 ['0', '1', '2', '3', '4', '5', '6', '7']
           default: '0'
           name: Forward Channel (Solenoid)
-          validators: &id023 [Solenoid]
+          validators: &id021 [Solenoid]
           value: '2'
       Base: Double Solenoid
       Name: configActuator
@@ -460,56 +450,56 @@ Children:
     - Children: []
       Properties:
         Forward PCM (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id016
+          choices: *id014
           default: '0'
           name: Forward PCM (Solenoid)
-          validators: *id017
+          validators: *id015
           value: '0'
         Reverse PCM (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id018
+          choices: *id016
           default: '0'
           name: Reverse PCM (Solenoid)
-          validators: *id019
+          validators: *id017
           value: '0'
         Reverse Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id020
+          choices: *id018
           default: '0'
           name: Reverse Channel (Solenoid)
-          validators: *id021
+          validators: *id019
           value: '5'
         Forward Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id022
+          choices: *id020
           default: '0'
           name: Forward Channel (Solenoid)
-          validators: *id023
+          validators: *id021
           value: '4'
       Base: Double Solenoid
       Name: trident
     - Children: []
       Properties:
         Forward PCM (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id016
+          choices: *id014
           default: '0'
           name: Forward PCM (Solenoid)
-          validators: *id017
+          validators: *id015
           value: '0'
         Reverse PCM (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id018
+          choices: *id016
           default: '0'
           name: Reverse PCM (Solenoid)
-          validators: *id019
+          validators: *id017
           value: '0'
         Reverse Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id020
+          choices: *id018
           default: '0'
           name: Reverse Channel (Solenoid)
-          validators: *id021
+          validators: *id019
           value: '1'
         Forward Channel (Solenoid): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id022
+          choices: *id020
           default: '0'
           name: Forward Channel (Solenoid)
-          validators: *id023
+          validators: *id021
           value: '0'
       Base: Double Solenoid
       Name: lifting
@@ -568,7 +558,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: driveStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id024 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+          choices: &id022 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
             '12', '13', '14', '15', '16']
           default: '1'
           name: Button
@@ -578,10 +568,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: &id025 [TypeDropdownSelected]
+          validators: &id023 [TypeDropdownSelected]
           value: invertDrive
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id026 [whileHeld, whenPressed, whenReleased]
+          choices: &id024 [whileHeld, whenPressed, whenReleased]
           default: whileHeld
           name: When to Run
           validators: null
@@ -593,7 +583,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: driveStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -602,10 +592,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: twist
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -617,7 +607,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: driveStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -626,10 +616,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: SmartStack
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -641,7 +631,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: driveStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -650,10 +640,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: SetBalanced
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -665,7 +655,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: driveStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -674,10 +664,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: SetForward
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -689,7 +679,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: driveStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -698,10 +688,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: SetAft
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -713,7 +703,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: driveStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -722,10 +712,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: EjectGroup
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -734,10 +724,10 @@ Children:
       Name: ejectButton
     Properties:
       Number: !!robotbuilder.data.properties.ChoicesProperty
-        choices: &id027 ['0', '1', '2', '3', '4', '5']
+        choices: &id025 ['0', '1', '2', '3', '4', '5']
         default: 1
         name: Number
-        validators: &id028 [Joystick]
+        validators: &id026 [Joystick]
         value: '0'
     Base: Joystick
     Name: driveStick
@@ -747,7 +737,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: secondaryStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -756,10 +746,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: liftActuator
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -771,7 +761,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: secondaryStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -780,10 +770,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: ConfigCommand
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -795,7 +785,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: secondaryStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -804,10 +794,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: tridentActuator
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -819,7 +809,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: secondaryStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -828,10 +818,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: stop
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -843,7 +833,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: secondaryStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -852,10 +842,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: spin
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -867,7 +857,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: secondaryStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -876,10 +866,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: GetThing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -891,7 +881,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: secondaryStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -900,10 +890,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: StackThing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -915,7 +905,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: secondaryStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -924,10 +914,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: RunIntake
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -939,7 +929,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: secondaryStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -948,10 +938,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: eject
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -963,7 +953,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: secondaryStick}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id024
+          choices: *id022
           default: '1'
           name: Button
           validators: null
@@ -972,10 +962,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id025
+          validators: *id023
           value: ContainerLift
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id026
+          choices: *id024
           default: whileHeld
           name: When to Run
           validators: null
@@ -984,10 +974,10 @@ Children:
       Name: containerLiftButton
     Properties:
       Number: !!robotbuilder.data.properties.ChoicesProperty
-        choices: *id027
+        choices: *id025
         default: 1
         name: Number
-        validators: *id028
+        validators: *id026
         value: '1'
     Base: Joystick
     Name: secondaryStick
